--- a/petclinic-deployment.yml
+++ b/petclinic-deployment.yml
@@ -19,3 +19,6 @@ spec:
         image: indrez/petclinic-dev:latest
         ports:
         - containerPort: 8080
+        envFrom:
+        - secretRef:
+            name: test-secret
