--- a/petclinic-deployment.yml
+++ b/petclinic-deployment.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: petclinic
-        image: indrez/petclinic-dev:latest
+        image: indrez/petclinic-dev:1
         ports:
         - containerPort: 8080
         envFrom:
