--- a/elastic-agent-standalone-kubernetes.yaml
+++ b/elastic-agent-standalone-kubernetes.yaml
@@ -691,17 +691,10 @@ spec:
         - name: elastic-agent-standalone
           image: docker.elastic.co/beats/elastic-agent:8.10.4
           args: ["-c", "/etc/elastic-agent/agent.yml", "-e"]
+          envFrom:
+          - secretRef:
+              name: test-secret
           env:
-            # The basic authentication username used to connect to Elasticsearch
-            # This user needs the privileges required to publish events to Elasticsearch.
-            - name: ES_USERNAME
-              value: "elastic"
-            # The basic authentication password used to connect to Elasticsearch
-            - name: ES_PASSWORD
-              value: "changeme"
-            # The Elasticsearch host to communicate with
-            - name: ES_HOST
-              value: ""
             - name: NODE_NAME
               valueFrom:
                 fieldRef:
